--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body class="index">
     <div id="main" role="main">
-      <h1>Your Name</h1>
-      <p>One sentence about what this is.</p>
+      <h1>My name is Lucas</h1>
+      <p>One time I tried to code.</p>
     </div>
   </body>
 </html>
