add background Image styles and border

--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>YOUR NAME</title>
+    <title>lucas rouchy</title>
+    <style>
+    body {
+      padding: 100px;
+    background-image: url(https://codetheweb.blog/assets/img/posts/css-advanced-background-images/mountains.jpg)
+    }
+    </style>
+    <link href="mystyles.css" rel="stylesheet"
   </head>
   <body class="index">
-    <div id="main" role="main">
+      <div id="main" role="main">
+     </div>
+     <div id="top">
       <h1>My name is Lucas</h1>
-      <p>One time I tried to code.</p>
-    </div>
+      <div id="middle">
+        <h2>This is my portfolio page</h2>
+     <h2 style="color: ivory"></h2>
+      </div>
+
+    <div id="bottom">
+      <h3>This is very hard </h3>
+    </div> 
+    <a href="https://github.com/lucasrouchy">Here is my github</a>
+    <a href="https://stackoverflow.com/users/12155223/lucasstayshydrated?tab=profile">Here is my stackoverflow</a>
   </body>
-</html>
+</html> 
