--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
     <title>lucas rouchy</title>
     <style>
@@ -11,21 +12,18 @@
     }
     </style>
     <link href="mystyles.css" rel="stylesheet"
-  </head>
-  <body class="index">
-      <div id="main" role="main">
-     </div>
-     <div id="top">
-      <h1>My name is Lucas</h1>
-      <div id="middle">
-        <h2>This is my portfolio page</h2>
-     <h2 style="color: ivory"></h2>
+  </head> 
+ <body class="index">
+   <div id="banner" role="banner">
+       <h1 id="intro">My name is Lucas</h1>
       </div>
+      <h2 id="Top">This is my portfolio page</h2>
+      <h3 id="Bottom">This is very hard </h3>
+      <div id="content" >
+       <a href="https://github.com/lucasrouchy">Here is my github</a>
+        <a href="https://stackoverflow.com/users/12155223/lucasstayshydrated?tab=profile">Here is my stackoverflow</a>
+ </div>
 
-    <div id="bottom">
-      <h3>This is very hard </h3>
-    </div> 
-    <a href="https://github.com/lucasrouchy">Here is my github</a>
-    <a href="https://stackoverflow.com/users/12155223/lucasstayshydrated?tab=profile">Here is my stackoverflow</a>
+   
   </body>
 </html> 
