--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Lucas Rouchy</h1>
+          <h1 onclick="this.style.color='orange';" class="display-3">Lucas Rouchy</h1>
           <p>This is my introduction</p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Resume &raquo;</a></p>
         </div>
