--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="screen.css" rel="stylesheet">
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        document.getElementById("mainHeader").onclick = function() {
+          this.style.color = 'orange'
+        }
+      })
+      </script>
   </head>
-
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -54,7 +60,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <h1 onclick="this.style.color='orange';" class="display-3">Lucas Rouchy</h1>
+          <h1 id="mainHeader"  class="display-3">Lucas Rouchy</h1>
           <p>This is my introduction</p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Resume &raquo;</a></p>
         </div>
