--- a/index.html
+++ b/index.html
@@ -5,20 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Lucas' Portfolio</title>
-
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="screen.css" rel="stylesheet">
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        document.getElementById("mainHeader").onclick = function() {
-          this.style.color = 'orange'
-        }
-      })
-      </script>
+    <script src="main.js"></script>
   </head>
   <body>
 
