add resume and data visualization project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
           <h1 id="mainHeader"  class="display-3">Lucas Rouchy</h1>
           <p>This is my introduction</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Resume &raquo;</a></p>
+          <p><a class="btn btn-primary btn-lg" href="Resume-7.pdf" role="button">Resume &raquo;</a></p>
         </div>
       </div>
 
@@ -72,9 +72,9 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-4">
-            <h2>My Skiing</h2>
-            <p>I'm going to make some ski videos this season but for now you can check out my instagram: lucas.rremy</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <h2>Data Visualization</h2>
+            <p>My Zagster Project </p>
+            <p><a class="btn btn-secondary" href="https://lucasrouchy.github.io/zagster-client/" role="button">View details &raquo;</a></p>
           </div>
         </div>
 
