fixed some details

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
           <div class="col-md-4">
             <h2>Stackoverflow</h2>
             <p>This is my stackoverflow </p>
-            <p><a class="btn btn-secondary" href="https://stackoverflow.com/users/12155223/lucasstayshydrated?tab=profile" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="https://stackoverflow.com/users/12155223/lucasstayshydrated?tab=profile" role="button">go there &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <h2>Data Visualization</h2>
             <p>My Zagster Project </p>
-            <p><a class="btn btn-secondary" href="https://lucasrouchy.github.io/zagster-client/" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="https://lucasrouchy.github.io/zagster-client/" role="button">go there &raquo;</a></p>
           </div>
         </div>
 
