--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
           <p>Developed a simulation of an ecosystem with a focus on the predator-prey relationships. The ecosystem is affected by precipitation and temperature. </p>
           <p>Construction of the simulation was done in C plus plus with a focus on concurrency.</p>
           <li>Github Repo: <a href="https://github.com/lucasrouchy/Ecosystem_Sim">Ecosystem Simulator</a></li>
-          <img src="image.png" alt="Ecosystem Simulation">
+          <div class="image-container">
+            <img src="image.png" alt="Ecosystem Simulation">
+          </div>
         </div>
         
         <div class="project">
@@ -163,6 +165,7 @@
     </section>
 
     <section id="HTMLstuff" >
+      <h2>HTML Stuff</h2>
       <div id="solar-system">
         <div class="sun"></div>
         <div class="planet earth">
