updated solar system

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
       </div>
       <div class="planet mars"></div>
      
-      <div class="spaceship"></div>
+      <div class="spaceship">
+        <div class="spaceship-body"></div>
+      </div>
       
       <div class="shooting-star"></div>
       <div class="shooting-star"></div>
