added f1 controlable car.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section id="HTMLstuff">
       <h2>HTML Stuff</h2>
     </section>
-    
+    <h3>Solar System Animatation</h3>
     <div id="solar-system">
       <div class="sun">
         <div class="sun-body"></div>
@@ -186,6 +186,23 @@
       <div class="shooting-star"></div>
       
     </div>
+    <h3>F1 Monaco Animatation</h3>
+    <p> Use WASD controls to move the car </p>
+    <div class="track">
+      <div class="inner-track"></div>
+      <div class="car"></div>
+      <div class="checkpoint start"></div>
+      <div class="checkpoint sainte-devote"></div>
+      <div class="checkpoint beau-rivage"></div>
+      <div class="checkpoint massenet"></div>
+      <div class="checkpoint casino-square"></div>
+      <div class="checkpoint mirabeau"></div>
+      <div class="checkpoint tabac"></div>
+      <div class="checkpoint swimming-pool"></div>
+      <div class="checkpoint la-rascasse"></div>
+      <div class="checkpoint antony-noghes"></div>
+    </div>
+    <script src="script.js"></script>
   </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
