explosion effect and seperation of utility functions for webGL

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       
     </div>
     <h3>F1 Monaco Animatation</h3>
-    <p> Use WASD controls to move the car </p>
+    <p> Use WASD controls to move the car. Shift iniates a drift. </p>
     <div class="track">
       <div class="inner-track"></div>
       <div class="car"></div>
@@ -210,9 +210,12 @@
       <h2>Shaders</h2>
       <h3>Particle System Simulation</h3>
       <p>written in JavaScript and WebGL</p>
+      <p>Click on the canvas to trigger an explosion</p>
       <div class="container">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas1"></canvas>
+        <script src="utility.js"></script>
         <script src="shader.js"></script>
+        
       </div>
 
 
